# app-template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: AppPlatform.hpp  Application.hpp  Camera.hpp  Event.hpp  ImGuiLayer.hpp  Input.hpp  Mesh.hpp  RenderContext.hpp  Window.hpp
include/utils/: matches.hpp
resources/assets/: default.vert
